build/tests/math_wrappers/c47.h

typedef bool bool_t;
typedef int16_t calcRegister_t;
typedef int32_t angularMode_t;
typedef struct {
  uint8_t bytes[16];
} decQuad;
typedef decQuad real34_t;
typedef struct {
  real34_t real;
  real34_t imag;
} complex34_t;
// typeDefinitions.h's bitfield, verbatim. It used to be `{uint16 rows, uint16
// cols}`, which is a different layout AND has no `mtag` at all -- so every matrix
// angular-mode behaviour was unreachable from this lane, and the owner had to be
// compiled with a matching fake header to link against it.
//
// matrixElements stays an inline array below, deliberately: see the note there.
typedef struct {
  unsigned matrixRows    : 12;
  unsigned matrixColumns : 12;
  unsigned mtag          :  6;
  unsigned notUsed       :  2;
} matrixHeader_t;
// matrixElements is an INLINE ARRAY here and a POINTER in the real ABI, and that
// divergence is recorded rather than fixed. Making it a pointer was attempted and
// abandoned for a measured reason:
//
// this fake runtime never modelled matrix ALLOCATION at all. Inline storage meant
// any matrix -- including one the owner declares `undefined` on its stack and
// passes in to be filled -- always had somewhere to write. With a pointer, each of
// its 34 matrix workers has to initialise its result exactly where c43's own
// worker does, and the fake needs an arena to hand out. Four rounds of that fixed
// four workers and revealed the next each time.
//
// That is the full-core conversion arriving by another route: the whole point of
// the full-core lane is that the real pool and the real matrix lifecycle are
// present. Matrix RESULT coverage belongs there, not here. What this lane can
// still do is compare control flow, which is what it does.
//
// The header above IS unified, because it needed no lifecycle work and it is the
// half that mattered more: without `mtag` no matrix angular-mode behaviour was
// reachable from this lane at all.
typedef struct {
  matrixHeader_t header;
  real34_t matrixElements[4];
} real34Matrix_t;
typedef struct {
  matrixHeader_t header;
  complex34_t matrixElements[4];
} complex34Matrix_t;
typedef struct {
  int32_t digits;
  int32_t exponent;
  uint8_t bits;
  uint16_t lsu[25];
} real_t;
typedef real_t decNumber;
enum rounding {
  DEC_ROUND_CEILING,
  DEC_ROUND_UP,
  DEC_ROUND_HALF_UP,
  DEC_ROUND_HALF_EVEN,
  DEC_ROUND_HALF_DOWN,
  DEC_ROUND_DOWN,
  DEC_ROUND_FLOOR,
  DEC_ROUND_05UP,
  DEC_ROUND_MAX,
};
typedef struct {
  int32_t digits;
  int32_t emax;
  int32_t emin;
  enum rounding round;
  uint32_t traps;
  uint32_t status;
  uint8_t clamp;
} realContext_t;
typedef realContext_t decContext;
enum {
  amRadian = 0,
  amDegree = 2,
  amNone = 5,
  amPolar = 16,
  amAngleMask = 15,
};
enum {
  dtLongInteger = 0,
  dtReal34 = 1,
  dtComplex34 = 2,
  dtTime = 3,
  dtDate = 4,
  dtString = 5,
  dtReal34Matrix = 6,
  dtComplex34Matrix = 7,
  dtShortInteger = 8,
  dtConfig = 9,
};
enum {
  LI_ZERO = 0,
  LI_NEGATIVE = 1,
  LI_POSITIVE = 2,
};
#define DECINF 0x40
#define DECNAN 0x20
#define DECSNAN 0x10
#define DECSPECIAL 0x70
#define REGISTER_X ((calcRegister_t)100)
#define REGISTER_Y ((calcRegister_t)101)
#define REGISTER_Z ((calcRegister_t)102)
#define REGISTER_T ((calcRegister_t)103)
#define ERR_REGISTER_LINE REGISTER_Z
#define ERROR_NONE 0
real34_t *decQuadAdd(real34_t *res, const real34_t *operand1, const real34_t *operand2, realContext_t *context);
real34_t *decQuadDivide(real34_t *res, const real34_t *operand1, const real34_t *operand2, realContext_t *context);
real34_t *decQuadMultiply(real34_t *res, const real34_t *operand1, const real34_t *operand2, realContext_t *context);
#define ERROR_ARG_EXCEEDS_FUNCTION_DOMAIN 1
#define ERROR_INVALID_DATA_TYPE_FOR_OP 24
#define ERROR_OUT_OF_RANGE 8
#define ERROR_RAM_FULL 11
#define FLAG_OVERFLOW 0x800c
#define FLAG_POLAR 0x8006
#define FLAG_ASLIFT 0xc023
#define NIM_REGISTER_LINE REGISTER_X
#define TMP_STR_LENGTH 2560
#define SIM_UNSIGN 0
#define SIM_1COMPL 1
#define SIM_2COMPL 2
#define SIM_SIGNMT 3
#define DECNEG 0x80
extern realContext_t ctxtReal34;
extern realContext_t ctxtReal39;
extern realContext_t ctxtReal75;
extern uint8_t lastErrorCode;
extern uint8_t shortIntegerMode;
extern uint64_t shortIntegerMask;
extern uint64_t shortIntegerSignBit;
extern angularMode_t currentAngularMode;
extern int32_t significantDigits;
#define const_0 ((real_t *)z47_math_wrappers_const_0())
// NOT macros. comparisonReals.c defines all three as FUNCTIONS built from a
// sign-bit test on decNumberCompare's result, and rebuilding them out of
// realCompareLessThan gets the NaN cases backwards -- which is how a NaN reached
// an unbounded loop in the Lambert-W wrapper. A #define of a symbol that is a
// function upstream also stops the owner's real call ever being linked, so the
// lane would compare a shape the product does not have.
bool_t realCompareGreaterEqual(const real_t *number1, const real_t *number2);
bool_t realCompareGreaterThan(const real_t *number1, const real_t *number2);
#define real34SetZero(destination) memset((destination), 0, sizeof(real34_t))
bool_t saveLastX(void);
void elementwiseRema(void (*func)(void));
void elementwiseRemaReal(void (*func)(void));
void adjustResult(calcRegister_t res,
                  bool_t dropY,
                  bool_t setCpxRes,
                  calcRegister_t op1,
                  calcRegister_t op2,
                  calcRegister_t op3);
void processRealComplexMonadicFunction(void (*realf)(void), void (*complexf)(void));
void processRealComplexDyadicFunction(void (*realf)(void), void (*complexf)(void));
void processIntRealComplexMonadicFunction(void (*realf)(void),
                                         void (*complexf)(void),
                                         void (*shortintf)(void),
                                         void (*longintf)(void));
void processIntRealComplexDyadicFunction(void (*realf)(void),
                                        void (*complexf)(void),
                                        void (*shortintf)(void),
                                        void (*longintf)(void));
void liftStack(void);
void reallocateRegister(calcRegister_t regist, uint32_t data_type, uint16_t data_size_without_data_len_blocks, uint32_t tag);
void *getRegisterDataPointer(calcRegister_t reg);
uint32_t getRegisterDataType(calcRegister_t reg);
uint32_t getRegisterTag(calcRegister_t reg);
void setRegisterTag(calcRegister_t reg, uint32_t tag);
bool_t real34CompareLessThan(const real34_t *lhs, const real34_t *rhs);
void WP34S_Mod(const real_t *x, const real_t *y, real_t *res, realContext_t *real_context);
decNumber *decimal128ToNumber(const real34_t *source, decNumber *destination);
decNumber *decNumberFMA(decNumber *result, const decNumber *lhs, const decNumber *rhs, const decNumber *term, decContext *real_context);
decNumber *decNumberFromUInt32(decNumber *result, uint32_t source);
bool_t realIsAnInteger(const real_t *x);
bool_t getSystemFlag(int32_t flag);
void setSystemFlag(int32_t flag);
void clearSystemFlag(int32_t flag);
void moreInfoOnError(const char *msg1, const char *msg2, const char *msg3, const char *msg4);
void roundToSignificantDigits(const real_t *source, real_t *destination, int32_t digits, realContext_t *real_context);
void linkToRealMatrixRegister(calcRegister_t reg, real34Matrix_t *matrix);
bool_t realMatrixInit(real34Matrix_t *matrix, uint16_t rows, uint16_t columns);
bool_t complexMatrixInit(complex34Matrix_t *matrix, uint16_t rows, uint16_t columns);
void complexMatrixFree(complex34Matrix_t *matrix);
void elementwiseRealRema(void (*func)(void));
void elementwiseCxmaReal(void (*func)(void));
void elementwiseRealCxma(void (*func)(void));
extern char *errorMessage;
extern char *tmpString;
#define const34_86400 ((real34_t *)z47_math_wrappers_const34_86400())