src/c47/registerValueConversions.h

  #define DOUBLE_NOT_INIT 3.402823466e+38f //maximum float value