zig_src/shell/register_value_conversions.zig

// SPDX-License-Identifier: GPL-3.0-only
const cstR = consts.cstR;
const consts = abi.constants;
const const_2p32 = consts.const_2p32;
const const34_86400 = consts.const34_86400;
const const34_43200 = consts.const34_43200;
const const34_2p32 = consts.const34_2p32;
const const6147_2pi = consts.const6147_2pi;
const const_2p64 = consts.const_2p64;
const const_0 = consts.const_0;
const const34_100 = consts.const34_100;
const const34_1e_4 = consts.const34_1e_4;
const const_2p63 = consts.const_2p63;
const const34_3600 = consts.const34_3600;
const const34_1e6 = consts.const34_1e6;
//
// Zig owner for src/c47/registerValueConversions.c: the central register-datatype
// conversion layer. It bridges GMP long integers, real/real34, short integers,
// matrices, date/time and complex register payloads, hosts the getRegisterAs*
// family and the monadic/dyadic real/complex dispatchers. It is exercised by the
// entire testSuite, so correctness is verified by `zig build test`.
//
// This is a faithful, line-by-line port of the C. Numeric constants come from the
// shared `constants` blob by byte offset; cst34()/cstR() return align(1) pointers
// (the macOS host build has a byte-aligned blob base, so an align-4 deref would
// trap). real34 ops go through decQuad/decimal128 externs; long integers go
// straight to mpz_*; the firmware RTC path uses the fixed-address SDK call.

const builtin = @import("builtin");
const std = @import("std");
const frontier_build_options = @import("frontier_build_options");
const extra_info: bool = frontier_build_options.extra_info_on_calc_error;
const dmcp_build: bool = frontier_build_options.dmcp_build;

// ---------------------------------------------------------------------------
// Types
// ---------------------------------------------------------------------------
const DECNUMUNITS = 25;
const abi = @import("abi"); // shared ABI bindings
const frontier_char_string = @import("display/text/char_string.zig");
const frontier_date_time = @import("convert/date_time.zig");
const frontier_debug = @import("debug.zig");
const frontier_display = @import("display/display.zig");
const frontier_error = @import("error.zig");
const frontier_integers = @import("convert/integers.zig");
const frontier_real_type = @import("real_type.zig");
const c_lconv = extern struct { decimal_point: [*c]u8 };
extern fn localeconv() *c_lconv;
extern fn strtod(s: [*c]const u8, endptr: ?*[*c]u8) f64;
const real_t = abi.Real;
const real34_t = abi.Real34;
const realContext_t = abi.RealContext;
const complex34_t = abi.Complex34;
const matrixHeader_t = abi.MatrixHeader;
const real34Matrix_t = abi.Real34Matrix;
const complex34Matrix_t = abi.Complex34Matrix;

const calcRegister_t = i16;
const angularMode_t = c_int;

// GMP mpz_struct. The limb width == pointer width on every target z47 builds
// (64-bit on Linux and Win64, 32-bit on ARM32 firmware). NOT c_ulong: Win64 is
// LLP64, where `unsigned long` is 32-bit yet GMP limbs are 64-bit — that mismatch
// mis-sized _mp_d and broke the @ptrCast to [*]u64 below on the Windows CI lane.
const mp_limb_t = usize;
const mpz_struct = abi.Mpz;
const LIMB_SIZE: u32 = @sizeOf(mp_limb_t);
const is32: bool = @sizeOf(*anyopaque) == 4;

// ---------------------------------------------------------------------------
// Constants / enum values
// ---------------------------------------------------------------------------
const dtLongInteger: u32 = 0;
const dtReal34: u32 = 1;
const dtComplex34: u32 = 2;
const dtTime: u32 = 3;
const dtDate: u32 = 4;
const dtReal34Matrix: u32 = 6;
const dtComplex34Matrix: u32 = 7;
const dtShortInteger: u32 = 8;

const SIM_UNSIGN: u8 = 0;
const SIM_1COMPL: u8 = 1;
const SIM_2COMPL: u8 = 2;
const SIM_SIGNMT: u8 = 3;

const LI_ZERO: u32 = 0;
const LI_NEGATIVE: u32 = 1;
const LI_POSITIVE: u32 = 2;

const amRadian: angularMode_t = 0;
const amGrad: angularMode_t = 1;
const amDegree: angularMode_t = 2;
const amDMS: angularMode_t = 3;
const amMultPi: angularMode_t = 4;
const amNone: angularMode_t = 5;
const amAngleMask: u32 = 15;
const amPolar: u32 = 16;

const FLAG_OVERFLOW: c_int = 0x800c;
const FLAG_YMD: c_int = 0xc001;
const FLAG_MDY: c_int = 0xc003;
const FLAG_DMY: c_int = 0xc002;
const FLAG_ASLIFT: c_uint = 0xc023;
const FLAG_POLAR: c_int = 0x8006;

const ERROR_NONE: u8 = 0;
const ERROR_ARG_EXCEEDS_FUNCTION_DOMAIN: u8 = 1;
const ERROR_BAD_TIME_OR_DATE_INPUT: u8 = 2;
const ERROR_OUT_OF_RANGE: u8 = 8;
const ERROR_RAM_FULL: u8 = 11;
const ERROR_INVALID_DATA_TYPE_FOR_OP: u8 = 24;

const REGISTER_X: calcRegister_t = 100;
const REGISTER_Y: calcRegister_t = 101;
const REGISTER_Z: calcRegister_t = 102;
const REGISTER_T: calcRegister_t = 103;
const ERR_REGISTER_LINE: calcRegister_t = REGISTER_Z;
const NIM_REGISTER_LINE: calcRegister_t = REGISTER_X;

const YY_MASK_TRACKING: u16 = 0x4000;
const YY_MASK_OFF: u16 = 0x8000;

const DEC_ROUND_DOWN: c_int = 5;

const ITM_CHS: i16 = 97;

const REAL34_SIZE_IN_BLOCKS: u16 = 4;
const REAL34_SIZE_IN_BYTES: u32 = 16;
const COMPLEX34_SIZE_IN_BLOCKS: u16 = 8;
const COMPLEX34_SIZE_IN_BYTES: u32 = 32;
const SHORT_INTEGER_SIZE_IN_BLOCKS: u16 = 2;
const DECQUAD_Pmax: usize = 34;
const DECDPUN: i32 = 3;
const TMP_STR_LENGTH: i32 = 2560;
const DOUBLE_NOT_INIT: f64 = 3.402823466e+38;

// decNumber bits.
const DECNEG: u8 = 0x80;
const DECINF: u8 = 0x40;
const DECNAN: u8 = 0x20;
const DECSNAN: u8 = 0x10;
const DECSPECIAL: u8 = DECINF | DECNAN | DECSNAN; // 0x70

// ---------------------------------------------------------------------------
// Constant blob
// ---------------------------------------------------------------------------

// ---------------------------------------------------------------------------
// Globals
// ---------------------------------------------------------------------------
extern var tmpString: [*c]u8;
extern var errorMessage: [*c]u8;
extern var shortIntegerMode: u8;
extern var shortIntegerMask: u64;
extern var shortIntegerSignBit: u64;
extern var lastCenturyHighUsed: u16;
extern var significantDigits: u8;
extern var currentAngularMode: angularMode_t;
extern var lastErrorCode: u8;
extern var lastFunc: i16;
extern var lastIntegerBase: u32;
extern var ctxtReal34: realContext_t;
extern var ctxtReal39: realContext_t;
extern var ctxtReal75: realContext_t;

// ---------------------------------------------------------------------------
// Linkable function externs
// ---------------------------------------------------------------------------
extern fn reallocateRegister(regist: calcRegister_t, data_type: u32, size_blocks: u16, tag: u32) void;
extern fn getRegisterDataType(regist: calcRegister_t) u32;
extern fn getRegisterDataPointer(regist: calcRegister_t) *anyopaque;
extern fn getRegisterTag(regist: calcRegister_t) u32;
extern fn setRegisterTag(regist: calcRegister_t, tag: u32) void;
extern fn getRegisterMaxDataLengthInBlocks(regist: calcRegister_t) u16;
extern fn adjustResult(result: calcRegister_t, drop_y: bool, set_cpx: bool, op1: calcRegister_t, op2: calcRegister_t, op3: calcRegister_t) void;
extern fn saveLastX() bool;
extern fn liftStack() void;

const c_moreInfoOnError = @extern(*const fn (m1: [*:0]const u8, m2: ?[*:0]const u8, m3: ?[*:0]const u8, m4: ?[*:0]const u8) callconv(.c) void, .{ .name = "moreInfoOnError" });

extern fn realMatrixInit(matrix: *real34Matrix_t, rows: u16, cols: u16) bool;
extern fn complexMatrixInit(matrix: *complex34Matrix_t, rows: u16, cols: u16) bool;
extern fn complexMatrixFree(matrix: *complex34Matrix_t) void;
extern fn linkToRealMatrixRegister(regist: calcRegister_t, linked: *real34Matrix_t) void;

extern fn roundToSignificantDigits(source: *const real_t, destination: *real_t, digits: u16, real_context: *realContext_t) void;
extern fn WP34S_Mod(x: *const real_t, y: *align(1) const real_t, res: *real_t, real_context: *realContext_t) void;
extern fn getSystemFlag(flag: c_int) bool;
extern fn setSystemFlag(flag: c_uint) void;
extern fn clearSystemFlag(flag: c_uint) void;

// real linkable helpers.

extern fn realIsAnInteger(x: *const real_t) bool;
extern fn realCompareGreaterEqual(a: *align(1) const real_t, b: *align(1) const real_t) bool;
extern fn realCompareGreaterThan(a: *align(1) const real_t, b: *align(1) const real_t) bool;
extern fn real34CompareGreaterEqual(a: *align(1) const real34_t, b: *align(1) const real34_t) bool;
extern fn real34CompareLessThan(a: *align(1) const real34_t, b: *align(1) const real34_t) bool;
// real34SetZero moved to engine/kernel/register_convert_bulk.zig.

// elementwise matrix dispatchers.
const Fn0 = ?*const fn () callconv(.c) void;
extern fn elementwiseRema(f: Fn0) void;
extern fn elementwiseCxma(f: Fn0) void;
extern fn elementwiseRemaRema(f: Fn0) void;
extern fn elementwiseCxmaRema(f: Fn0) void;
extern fn elementwiseCplxRema(f: Fn0) void;
extern fn elementwiseRealRema(f: Fn0) void;
extern fn elementwiseRemaCxma(f: Fn0) void;
extern fn elementwiseCxmaCxma(f: Fn0) void;
extern fn elementwiseCplxCxma(f: Fn0) void;
extern fn elementwiseRemaReal(f: Fn0) void;
extern fn elementwiseRemaCplx(f: Fn0) void;
extern fn elementwiseCxmaCplx(f: Fn0) void;

// ---------------------------------------------------------------------------
// decNumber / decQuad externs
// ---------------------------------------------------------------------------
extern fn decQuadFromInt32(r: *real34_t, v: i32) *real34_t;
extern fn decQuadFromUInt32(r: *real34_t, v: u32) *real34_t;
extern fn decQuadFromString(r: *real34_t, s: [*c]const u8, ctx: *realContext_t) *real34_t;
extern fn decQuadGetCoefficient(r: *align(1) const real34_t, bcd: [*]u8) i32;
extern fn decQuadGetExponent(r: *align(1) const real34_t) i32;
extern fn decQuadToInt32(r: *align(1) const real34_t, ctx: *realContext_t, round: c_int) i32;
extern fn decQuadZero(r: *real34_t) *real34_t;
extern fn decQuadAdd(r: *real34_t, a: *align(1) const real34_t, b: *align(1) const real34_t, ctx: *realContext_t) *real34_t;
extern fn decQuadDivide(r: *real34_t, a: *align(1) const real34_t, b: *align(1) const real34_t, ctx: *realContext_t) *real34_t;
extern fn decQuadMultiply(r: *real34_t, a: *align(1) const real34_t, b: *align(1) const real34_t, ctx: *realContext_t) *real34_t;
extern fn decQuadSubtract(r: *real34_t, a: *align(1) const real34_t, b: *align(1) const real34_t, ctx: *realContext_t) *real34_t;
extern fn decQuadFMA(r: *real34_t, a: *align(1) const real34_t, b: *align(1) const real34_t, c: *align(1) const real34_t, ctx: *realContext_t) *real34_t;
extern fn decQuadToIntegralValue(r: *real34_t, a: *align(1) const real34_t, ctx: *realContext_t, round: c_int) *real34_t;
extern fn decQuadCopyAbs(r: *real34_t, a: *align(1) const real34_t) *real34_t;

extern fn decimal128ToNumber(src: *align(1) const real34_t, dst: *real_t) *real_t;
extern fn decimal128FromNumber(dst: *real34_t, src: *const real_t, ctx: *realContext_t) *real34_t;

extern fn decNumberFromUInt32(r: *real_t, v: u32) *real_t;
extern fn decNumberFromString(r: *real_t, s: [*c]const u8, ctx: *realContext_t) *real_t;
extern fn decNumberToString(r: *const real_t, s: [*]u8) [*c]u8;
extern fn decNumberToUInt64(r: *const real_t, ctx: *realContext_t) u64;
extern fn decNumberGetBCD(r: *const real_t, bcd: [*]u8) [*c]u8;
extern fn decNumberFMA(r: *real_t, a: *align(1) const real_t, b: *align(1) const real_t, c: *align(1) const real_t, ctx: *realContext_t) *real_t;
extern fn decNumberPlus(r: *real_t, a: *align(1) const real_t, ctx: *realContext_t) *real_t;
extern fn decNumberQuantize(r: *real_t, a: *align(1) const real_t, b: *align(1) const real_t, ctx: *realContext_t) *real_t;
extern fn decNumberToIntegralValue(r: *real_t, a: *const real_t, ctx: *realContext_t) *real_t;
